CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(CoreCpp)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

ADD_EXECUTABLE(CoreCpp1OfN CoreCpp1OfN.cpp)
ADD_EXECUTABLE(CoreCpp2OfN CoreCpp2OfN.cpp)
ADD_EXECUTABLE(CoreCpp3OfN CoreCpp3OfN.cpp)
ADD_EXECUTABLE(CoreCpp4OfN CoreCpp4OfN.cpp)
ADD_EXECUTABLE(CoreCpp5OfN CoreCpp5OfN.cpp)
ADD_EXECUTABLE(CoreCpp6OfN CoreCpp6OfN.cpp)
ADD_EXECUTABLE(CoreCpp7OfN CoreCpp7OfN.cpp)
ADD_EXECUTABLE(CoreCpp8OfN CoreCpp8OfN.cpp)
