CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(CoreCpp)

ADD_COMPILE_OPTIONS(-std=c++11)
ADD_EXECUTABLE(CoreCpp1OfN CoreCpp1OfN.cpp)
ADD_EXECUTABLE(CoreCpp2OfN CoreCpp2OfN.cpp)
ADD_EXECUTABLE(CoreCpp3OfN CoreCpp3OfN.cpp)
ADD_EXECUTABLE(CoreCpp4OfN CoreCpp4OfN.cpp)
ADD_EXECUTABLE(CoreCpp5OfN CoreCpp5OfN.cpp)
ADD_EXECUTABLE(CoreCpp6OfN CoreCpp6OfN.cpp)
ADD_EXECUTABLE(CoreCpp7OfN CoreCpp7OfN.cpp)
ADD_EXECUTABLE(CoreCpp8OfN CoreCpp8OfN.cpp)
ADD_EXECUTABLE(CoreCpp9OfN CoreCpp9OfN.cpp)
ADD_COMPILE_OPTIONS(-std=c++14)
ADD_EXECUTABLE(CoreCpp10OfN CoreCpp10OfN.cpp)
